# graphite

./: README.md  meson.build  requirements.txt
data/: io.github.cacheuseonly.graphite.desktop.in  io.github.cacheuseonly.graphite.gschema.xml  io.github.cacheuseonly.graphite.metainfo.xml.in  meson.build
data/icons/: meson.build
debian/: .gitignore  changelog  control
flatpak/: io.github.cacheuseonly.graphite.json
po/: POTFILES  meson.build
src/: apt_dependency.py  canvas.py  graphite.gresource.xml  graphite.in  loading_page.py  main.py  meson.build  panel.py  preferences.py  search_row.py  state_manager.py  utils.py  window.py
src/fa2_adjustSize/: .gitignore  fa2util.py  fa2util.pyx  forceatlas2.py  meson.build  setup.py
src/ui/: canvas.ui  help-overlay.ui  loading-page.ui  panel.ui  preferences.ui  window.ui
